
  INCOMPATIBLE CHANGES

  NEW FEATURES

    HADOOP-12635. Adding Append API support for WASB. (Dushyanth via cnauroth)

    HADOOP-12691. Add CSRF Filter for REST APIs to Hadoop Common.
    (Larry McCay via cnauroth)

    HADOOP-12426. Add Entry point for Kerberos health check
    (Steve Loughran via cnauroth)

    HADOOP-11262. Enable YARN to use S3A. (Pieter Reuse via lei)

  IMPROVEMENTS

    HADOOP-11960. Enable Azure-Storage Client Side logging.
    (Dushyanth via cnauroth)

    HADOOP-10597. RPC Server signals backoff to clients when all request
    queues are full. (Ming Ma via Arpit Agarwal)

    HADOOP-12324. Better exception reporting in SaslPlainServer.   (Mike Yoder via stevel)

    HADOOP-12325. RPC Metrics : Add the ability track and log slow RPCs.
    (Anu Engineer via xyao)

    HADOOP-12358. Add -safely flag to rm to prompt when deleting many files.
    (xyao via wang)

    HADOOP-12350. WASB Logging: Improve WASB Logging around deletes, reads and
    writes (Dushyanth via cnauroth)

    HADOOP-12413. AccessControlList should avoid calling getGroupNames in
    isUserInList with empty groups. (Zhihai Xu via cnauroth)

    HADOOP-11628. SPNEGO auth does not work with CNAMEs in JDK8.
    (Daryn Sharp via stevel)

    HADOOP-11685. StorageException complaining " no lease ID" during HBase
    distributed log splitting (Duo Xu via cnauroth)

    HADOOP-12440. TestRPC#testRPCServerShutdown did not produce the desired
    thread states before shutting down. (Xiao Chen via mingma)

    HADOOP-12758. Extend CSRF Filter with UserAgent Checks
    (Larry McCay via cnauroth)

    HADOOP-12366. expose calculated paths (aw)

    HADOOP-12059. S3Credentials should support use of CredentialProvider.
    (Sean Busbey via wang)

    HADOOP-12548. Read s3a creds from a Credential Provider.
    (Larry McCay via cnauroth)

    HADOOP-11031. Design Document for Credential Provider API.
    (Larry McCay via cnauroth)
